# fyb-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  news_data.json  pyproject.toml  requirements.txt  schema.yml
bands/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
bands/migrations/: 0001_initial.py  0002_initial.py
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
config/: asgi.py  celery.py  settings.py  urls.py
news/: services.py  tests.py  urls.py  views.py
notifications/: admin.py  models.py  tasks.py  views.py
notifications/migrations/: 0001_initial.py
templates/: chat.html
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_band_options.py  0002_favoritevacancy.py  0002_remove_user_role_alter_user_groups_and_more.py  0003_alter_band_options_alter_band_city_alter_band_image_and_more.py  0003_delete_favoritevacancy.py  0003_user_role_alter_user_groups_and_more.py  0004_alter_band_leader_alter_band_members.py  0005_remove_band_members_band_members.py
vacancies/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
vacancies/migrations/: 0001_initial.py  0002_alter_bandvacancy_options_and_more.py  0002_alter_organizervacancy_options_and_more.py  0002_bandvacancy_created_at_musicianvacancy_created_at_and_more.py  0003_alter_bandvacancy_genres_and_more.py  0003_alter_bandvacancy_options_and_more.py  0004_alter_bandvacancy_contacts_and_more.py  0005_alter_bandvacancy_description_and_more.py  0006_alter_bandvacancy_genre_alter_musicianvacancy_genre.py  0007_alter_musicianvacancy_instruments.py  0008_alter_musicianvacancy_instruments.py  0009_remove_bandvacancy_genre_and_more.py  0010_alter_bandvacancy_genres_and_more.py  0011_alter_bandvacancy_created_by.py
vacancies/models/: __init__.py  band_vacancy.py  base.py  musician_vacancy.py  organizer_vacancy.py
vacancies/serializers/: __init__.py  base.py  mixins.py  vacancies.py
