[project]
name = "fyb-backend"
version = "0.1.0"
description = "FindYourBand REST API: App for finding musicians and bands"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.2.0",
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "automat==24.8.1",
    "billiard==4.2.0",
    "celery==5.4.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "channels==4.2.0",
    "channels-redis==4.2.1",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "coverage==7.6.1",
    "cron-descriptor==1.4.5",
    "cryptography==43.0.1",
    "daphne==4.1.2",
    "defusedxml==0.8.0rc2",
    "dj-rest-auth==7.0.0",
    "django==5.1.1",
    "django-allauth==65.3.1",
    "django-celery-beat==2.7.0",
    "django-debug-toolbar==4.4.6",
    "django-filter==24.3",
    "django-oauth-toolkit==2.4.0",
    "django-timezone-field==7.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.2",
    "flower==2.0.1",
    "humanize==4.10.0",
    "hyperlink==21.0.0",
    "idna==3.8",
    "incremental==24.7.2",
    "inflection==0.5.1",
    "iniconfig==2.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jwcrypto==1.5.6",
    "kombu==5.4.0",
    "msgpack==1.1.0",
    "oauthlib==3.2.2",
    "packaging==24.1",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.47",
    "psycopg==3.2.1",
    "psycopg2==2.9.9",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "pyopenssl==25.0.0",
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python3-openid==3.2.0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "redis==5.1.0b7",
    "referencing==0.35.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rpds-py==0.21.0",
    "service-identity==24.2.0",
    "setuptools==75.8.0",
    "six==1.16.0",
    "social-auth-app-django==5.4.2",
    "social-auth-core==4.5.4",
    "sqlparse==0.5.1",
    "tornado==6.4.1",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "uuid==1.30",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "zope-interface==7.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py","tests.py"]